--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,12 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\QFramework\Core\AI\QFSM.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\ILogOutput.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\QConsole.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\QFPSCounter.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\QFileLogOutput.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\QLog.cs" />
+     <Compile Include="Assets\QFramework\Core\Debug\QMemoryDetector.cs" />
      <Compile Include="Assets\QFramework\Core\Event\IMsgReceiver.cs" />
      <Compile Include="Assets\QFramework\Core\Event\IMsgSender.cs" />
      <Compile Include="Assets\QFramework\Core\Event\QMsg.cs" />
@@ -103,28 +109,15 @@
      <Compile Include="Assets\QFramework\QUIFramework\Script\UIProperty.cs" />
      <Compile Include="Assets\QFramework\QUIFramework\Script\UIScrollPage.cs" />
      <Compile Include="Assets\QFramework\QUIFramework\Script\UIScrollPageMark.cs" />
-     <Compile Include="Assets\QFramework\Script\Global\Enum.cs" />
-     <Compile Include="Assets\QFramework\Script\Global\SceneName.cs" />
-     <Compile Include="Assets\QFramework\Script\Log\ILogOutput.cs" />
-     <Compile Include="Assets\QFramework\Script\Log\QFileLogOutput.cs" />
-     <Compile Include="Assets\QFramework\Script\Log\QLog.cs" />
      <Compile Include="Assets\QFramework\Script\Manager\QCoroutineMgr.cs" />
      <Compile Include="Assets\QFramework\Script\Manager\QSoundMgr.cs" />
      <Compile Include="Assets\QFramework\Script\Manager\QThreadMgr.cs" />
-     <Compile Include="Assets\QFramework\Script\Platform\UnityToiOS.cs" />
-     <Compile Include="Assets\QFramework\Script\Platform\iOSTest.cs" />
-     <Compile Include="Assets\QFramework\Script\Profiler\QConsole.cs" />
-     <Compile Include="Assets\QFramework\Script\Profiler\QFPSCounter.cs" />
-     <Compile Include="Assets\QFramework\Script\Profiler\QMemoryDetector.cs" />
      <Compile Include="Assets\QFramework\Script\QApp.cs" />
-     <Compile Include="Assets\QFramework\Script\Setting\QSetting.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QBehaviourExtend.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QGoExtend.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QTimer.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QTransExtend.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QUtil.cs" />
-     <Compile Include="Assets\QFramework\Script\particle\QLightCircle.cs" />
-     <Compile Include="Assets\QFramework\Script\particle\core\AfterburnerPhysicsForce.cs" />
      <Compile Include="Assets\_Script\GameManager.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
