--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Example\1.UIFramework\Main.cs" />
+     <Compile Include="Assets\Example\2.UnityMsg\Main.cs" />
      <Compile Include="Assets\QFramework\Core\AI\QFSM.cs" />
      <Compile Include="Assets\QFramework\Core\Debug\ILogOutput.cs" />
      <Compile Include="Assets\QFramework\Core\Debug\QConsole.cs" />
@@ -118,12 +120,15 @@
      <Compile Include="Assets\QFramework\Script\Util\QTimer.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QTransExtend.cs" />
      <Compile Include="Assets\QFramework\Script\Util\QUtil.cs" />
-     <Compile Include="Assets\_Script\1.UIFramework\Main.cs" />
      <Compile Include="Assets\_Script\GameManager.cs" />
      <Compile Include="Assets\_Script\UI\UIFirstPage.cs" />
      <Compile Include="Assets\_Script\UI\UIFirstPageComponents.cs" />
      <Compile Include="Assets\_Script\UI\UIMainPage.cs" />
      <Compile Include="Assets\_Script\UI\UIMainPageComponents.cs" />
+     <Compile Include="Assets\_Script\UI\UIUnityMsgChildPanel.cs" />
+     <Compile Include="Assets\_Script\UI\UIUnityMsgChildPanelComponents.cs" />
+     <Compile Include="Assets\_Script\UI\UIUnityMsgRootPage.cs" />
+     <Compile Include="Assets\_Script\UI\UIUnityMsgRootPageComponents.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
