--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,8 +47,10 @@
   <ItemGroup>
      <Compile Include="Assets\Example\0.CodeStyle\CodeSample.cs" />
      <Compile Include="Assets\Example\1.UIFramework\Main.cs" />
-     <Compile Include="Assets\Example\2.UnityMsg\Main.cs" />
-     <Compile Include="Assets\Example\2.UnityMsg\MsgDefine.cs" />
+     <Compile Include="Assets\Example\2.MsgPerformance\Main.cs" />
+     <Compile Include="Assets\Example\2.MsgPerformance\MsgDefine.cs" />
+     <Compile Include="Assets\Example\3.FSMPerformance\Main.cs" />
+     <Compile Include="Assets\Example\3.FSMPerformance\MsgDefine.cs" />
      <Compile Include="Assets\QFramework\Core\AI\QFSM.cs" />
      <Compile Include="Assets\QFramework\Core\Debug\ILogOutput.cs" />
      <Compile Include="Assets\QFramework\Core\Debug\QConsole.cs" />
