--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_1;UNITY_5_4;UNITY_5;UNITY_64;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_OSX;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_3;UNITY_5_4;UNITY_5;UNITY_64;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_OSX;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -64,12 +64,25 @@
      <Compile Include="Assets\QFramework\Editor\XUPorter-master\XCPlist.cs" />
      <Compile Include="Assets\QFramework\Editor\XUPorter-master\XCProject.cs" />
      <Compile Include="Assets\QFramework\Editor\XUPorter-master\XCodePostProcess.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\AssetbundlesMenuItems.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\BuildScript.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\ExecuteInternalMono.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\FTPClient.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\IFTPInterface.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\LoomEditorWindow.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleBuilder.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleTool.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleUploader.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTBundleInfoGenerator.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTConfigManager.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\PTCustomAssets.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\Packager.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABBuilder.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABCodeGenerator.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABConfigMgr.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABEditor.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QEditorUtil.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\SFTPHelper.cs" />
      <Compile Include="Assets\QFramework\QExcel2XML\Editor\GenXML.cs" />
      <Compile Include="Assets\QFramework\QLocalize\Editor\AppNameAndroidResGenerator.cs" />
      <Compile Include="Assets\QFramework\QLocalize\Editor\AppNameConfigData.cs" />
@@ -80,9 +93,11 @@
      <Compile Include="Assets\QFramework\QUIFramework\Editor\QUICodeGenerator.cs" />
      <None Include="Assets\QFramework\QLocalize\ptversion.xml" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\en.xml" />
+     <None Include="Assets\QFramework\QAB\Script\readme.txt" />
      <None Include="Assets\QFramework\QLocalize\readme.txt" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\zh-Hans.xml" />
      <None Include="Assets\QFramework\QLocalize\Template\strings.xml" />
+     <None Include="Assets\QFramework\QAB\Script\ptversion.xml" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\zh-Hant.xml" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
@@ -109,13 +124,13 @@
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TreeEditor/Editor/UnityEditor.TreeEditor.dll</HintPath>
  </Reference>
  <Reference Include="Excel">
- <HintPath>/Users/admin/QFramework/Assets/QFramework/QExcel2XML/Excel.dll</HintPath>
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/Excel.dll</HintPath>
  </Reference>
  <Reference Include="ICSharpCode.SharpZipLib">
- <HintPath>/Users/admin/QFramework/Assets/QFramework/QExcel2XML/ICSharpCode.SharpZipLib.dll</HintPath>
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/ICSharpCode.SharpZipLib.dll</HintPath>
  </Reference>
  <Reference Include="System.Data">
- <HintPath>/Users/admin/QFramework/Assets/QFramework/QExcel2XML/System.Data.dll</HintPath>
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/System.Data.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEditor.Graphs.dll</HintPath>
@@ -128,6 +143,21 @@
  </Reference>
  <Reference Include="UnityEditor.OSXStandalone.Extensions">
  <HintPath>/Applications/Unity/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="Org.Mentalis.Security">
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QAB/Editor/Org.Mentalis.Security.dll</HintPath>
+ </Reference>
+ <Reference Include="Tamir.SharpSSH">
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QAB/Editor/Tamir.SharpSSH.dll</HintPath>
+ </Reference>
+ <Reference Include="DiffieHellman">
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QAB/Editor/DiffieHellman.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+ <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions.Common">
+ <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Common.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
