--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -70,7 +70,6 @@
      <Compile Include="Assets\QFramework\QAB\Editor\FTPClient.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\IFTPInterface.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\LoomEditorWindow.cs" />
-     <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleBuilder.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleTool.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\PTAssetBundleUploader.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\PTBundleInfoGenerator.cs" />
@@ -81,6 +80,7 @@
      <Compile Include="Assets\QFramework\QAB\Editor\QABCodeGenerator.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABConfigMgr.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QABEditor.cs" />
+     <Compile Include="Assets\QFramework\QAB\Editor\QAssetBundleBuilder.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\QEditorUtil.cs" />
      <Compile Include="Assets\QFramework\QAB\Editor\SFTPHelper.cs" />
      <Compile Include="Assets\QFramework\QExcel2XML\Editor\GenXML.cs" />
@@ -92,13 +92,13 @@
      <Compile Include="Assets\QFramework\QLocalize\Editor\PermissionDesEditorWindow.cs" />
      <Compile Include="Assets\QFramework\QUIFramework\Editor\QUICodeGenerator.cs" />
      <None Include="Assets\QFramework\QLocalize\ptversion.xml" />
-     <None Include="Assets\QFrameworkData\QAB\resitems.xml" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\en.xml" />
      <None Include="Assets\QFramework\QAB\Script\readme.txt" />
      <None Include="Assets\QFramework\QLocalize\readme.txt" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\zh-Hans.xml" />
      <None Include="Assets\QFramework\QLocalize\Template\strings.xml" />
      <None Include="Assets\QFramework\QAB\Script\ptversion.xml" />
+     <None Include="Assets\QFrameworkData\resitems.xml" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\zh-Hant.xml" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
@@ -136,9 +136,6 @@
  <Reference Include="Excel">
  <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/Excel.dll</HintPath>
  </Reference>
- <Reference Include="ICSharpCode.SharpZipLib">
- <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/ICSharpCode.SharpZipLib.dll</HintPath>
- </Reference>
  <Reference Include="System.Data">
  <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QExcel2XML/System.Data.dll</HintPath>
  </Reference>
@@ -153,6 +150,9 @@
  </Reference>
  <Reference Include="UnityEditor.OSXStandalone.Extensions">
  <HintPath>/Applications/Unity/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="ICSharpCode.SharpZipLib">
+ <HintPath>/Users/liangxie/git/QFramework/Assets/QFramework/QAB/Editor/ICSharpCode.SharpZipLib.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
