--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -165,6 +165,7 @@
      <None Include="Assets\QFramework\QLocalize\Template\strings.xml" />
      <None Include="Assets\QFramework\QAB\Script\ptversion.xml" />
      <None Include="Assets\QFrameworkData\resitems.xml" />
+     <None Include="Assets\StreamingAssets\AssetBundles\OSX\putaogame\resconfig.xml" />
      <None Include="Assets\QFramework\QLocalize\Permission\iOSData\zh-Hant.xml" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
