--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Example\0.CodeStyle\CodeStyle.cs" />
+     <Compile Include="Assets\Example\0.ProgrammingStyle\ProgrammingStyle.cs" />
      <Compile Include="Assets\Example\1.UIFramework\UIFrameworkCtrl.cs" />
      <Compile Include="Assets\Example\2.FSMLite\FSMLiteExample.cs" />
      <Compile Include="Assets\Example\3.MsgDispatcherLite\MsgDispatcherLiteExample.cs" />
